# Hackathon-II

Phase-I/: .coverage  CLI_GUIDE.md  COMMANDS.md  DOCUMENTATION.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATISTICS.txt  QUICK_START.md  README.md  pyproject.toml
Phase-I/.claude/agents/: business-logic-engineer.md  cli-ux-designer.md  data-model-designer.md  product-architect.md  quality-assurance.md  requirements-analyst.md
Phase-I/.claude/skills/: 001-requirements-analyst-feature-to-stories.md  002-cli-ux-designer-functional-analysis.md  003-quality-assurance-edge-case-identification.md  004-product-architect-acceptance-criteria.md  005-data-model-designer-task-entity.md  006-data-model-designer-optimization.md  007-data-model-designer-versioning-strategy.md  008-cli-ux-designer-command-design.md  009-cli-ux-designer-user-experience.md  010-quality-assurance-error-messaging.md  011-business-logic-engineer-algorithms.md  012-business-logic-engineer-rules.md  013-business-logic-engineer-state-management.md  014-quality-assurance-input-validation.md  015-quality-assurance-negative-testing.md  016-quality-assurance-boundary-testing.md
Phase-I/.specify/memory/: constitution.md
Phase-I/specs/1-phase-1-todo-app/: data-model.md  plan.md  research.md  spec.md  tasks.md
Phase-I/src/: __init__.py  __main__.py  cli_beautiful.py  cli_interactive.py  storage.py
Phase-I/src/cli/: __init__.py
Phase-I/src/models/: __init__.py  enums.py  task.py  validators.py
Phase-I/src/services/: __init__.py  category_service.py  (+5 more)
Phase-I/tests/: __init__.py
(+29 files in other folders)
