[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "1.0.0"
description = "Phase 1 Todo App - Intermediate and Advanced Features"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Claude Code", email = "noreply@anthropic.com"}
]
keywords = ["todo", "cli", "task-management"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
